--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:padding="@dimen/content_padding">
+    android:focusableInTouchMode="true">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="@string/sign_in_to_your_account"
         android:textSize="24sp"
@@ -23,43 +23,51 @@
         android:id="@+id/email_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/email_address"
         android:textColor="@color/textColorSecondary"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
     <EditText
         android:id="@+id/email_address"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress|textAutoComplete"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/email_title"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/email_title"
         app:layout_constraintTop_toBottomOf="@id/email_title" />
 
     <TextView
         android:id="@+id/password_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="@string/password"
         android:textColor="@color/textColorSecondary"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/email_address"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/email_address"
         app:layout_constraintTop_toBottomOf="@id/email_address" />
 
     <FrameLayout
         android:id="@+id/password_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_title">
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:paddingEnd="28dp"
-            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/password_clear"
@@ -68,21 +76,32 @@
             android:layout_gravity="end|center_vertical"
             android:src="@drawable/delete"
             android:visibility="invisible" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:paddingEnd="28dp"
+            android:textSize="16sp" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/incorrect"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="#fe4d5f"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/password_holder"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/password_holder"
         app:layout_constraintTop_toBottomOf="@id/password_holder" />
 
-    <Button
+    <TextView
         android:id="@+id/sign_in"
         style="@style/DisablableActionButtonStyle"
+        android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="@string/sign_in"
@@ -91,6 +110,7 @@
         app:layout_constraintTop_toBottomOf="@id/incorrect" />
 
     <TextView
+        android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
@@ -102,7 +122,7 @@
         app:layout_constraintBottom_toTopOf="@id/sign_up"
         tools:layout_editor_absoluteX="16dp" />
 
-    <Button
+    <TextView
         android:id="@+id/sign_up"
         style="@style/ActionButtonStyle"
         android:layout_marginBottom="16dp"
@@ -115,5 +135,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_in"
         app:layout_constraintVertical_bias="1" />
+
+    <TextView
+        android:id="@+id/bDeeplinkIssues"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="24dp"
+        android:text="@string/sign_in_deeplink_issues"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <include
+        android:id="@+id/lDeeplinkIssues"
+        layout="@layout/inflate_paste_deeplink"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
