--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,8 +92,11 @@
     <style name="ActionButtonStyle">
         <item name="android:layout_width">232dp</item>
         <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:background">@drawable/bg_button</item>
         <item name="backgroundTint">@null</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
