--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--BottomAppBar-->
-    <dimen name="bottom_app_bar_height">56dp</dimen>
-    <dimen name="bottom_app_bar_logo_size">32dp</dimen>
+    <dimen name="verification_code_font_size">24dp</dimen>
+    <dimen name="verification_code_item_height">70dp</dimen>
+    <dimen name="verification_code_item_width">44dp</dimen>
+    <dimen name="verification_code_margin">8dp</dimen>
+
+    <dimen name="visit_list_icon_size">64dp</dimen>
+    <dimen name="visit_list_icon_image_size">48dp</dimen>
+    <dimen name="visit_list_icon_image_padding">6dp</dimen>
+    <dimen name="visit_list_subicon_size">24dp</dimen>
+    <dimen name="visit_list_subicon_left">42dp</dimen>
+    <dimen name="visit_list_subicon_top">0dp</dimen>
+
+    <dimen name="history_map_padding">60dp</dimen>
+    <dimen name="history_summary_peek_height">30dp</dimen>
+
+    <dimen name="current_trip_bottom_bar_start_height">140dp</dimen>
+
     <dimen name="content_padding">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="elevation">6dp</dimen>
+
 
 </resources>
