--- a/app/src/main/res/layout/fragment_current_trip.xml
+++ b/app/src/main/res/layout/fragment_current_trip.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/location_button"
+        style="@style/FloatingActionButtonSmall"
+        android:background="@color/colorRed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_location_live" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/googleMap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -61,6 +69,7 @@
         tools:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -69,20 +78,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:id="@+id/blocking_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="@id/content_frame"
-                app:layout_constraintTop_toTopOf="@id/content_frame" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/location_button"
-                style="@style/FloatingActionButtonSmall"
-                app:layout_constraintBottom_toTopOf="@id/where_are_you"
-                app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@drawable/ic_location_live" />
 
             <TextView
                 android:id="@+id/offline"
@@ -124,6 +119,13 @@
 
 
         </FrameLayout>
+
+        <View
+            android:id="@+id/blocking_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_anchor="@+id/constraintLayout"
+            app:layout_anchorGravity="center" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
