Refactor mocking. Fix null in Google Places address. Add My location button to Select location screen Add local model for order estimate. Add order markers background.

--- a/app/src/main/res/drawable/ic_order_completed.xml
+++ b/app/src/main/res/drawable/ic_order_completed.xml
@@ -1,9 +1,13 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="@color/colorHyperTrackGreen"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM10,17l-5,-5 1.41,-1.41L10,14.17l7.59,-7.59L19,8l-9,9z" />
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:top="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:bottom="4dp">
+        <shape android:shape="oval">
+            <solid android:color="@color/colorWhite" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/ic_order_completed_foreground" />
+</layer-list>
