--- a/app/src/main/res/layout/fragment_select_destination.xml
+++ b/app/src/main/res/layout/fragment_select_destination.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/bMyLocation"
+        style="@style/FloatingActionButtonSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorRed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lLocationInfo"
+        app:srcCompat="@drawable/ic_location_live" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
