--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,6 +84,10 @@
         <item name="android:textColor">@color/colorTextDark</item>
     </style>
 
+    <style name="ErrorText" parent="Text">
+        <item name="android:textColor">@color/colorRed</item>
+    </style>
+
     <style name="LoaderDialog" parent="android:Theme.Holo.Dialog.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -91,7 +95,7 @@
 
     <style name="ActionButtonStyle">
         <item name="android:layout_width">232dp</item>
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">@dimen/action_button_height</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/bg_button</item>
         <item name="backgroundTint">@null</item>
