--- a/app/src/main/res/layout/inflate_paste_deeplink.xml
+++ b/app/src/main/res/layout/inflate_paste_deeplink.xml
@@ -51,7 +51,8 @@
             android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="@string/sign_in_deeplink_hint"
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine"
+            android:minLines="2"
             app:layout_constraintEnd_toStartOf="@+id/bClose"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
