Remove timeline tile notch

--- a/app/src/main/res/layout/item_history_tile.xml
+++ b/app/src/main/res/layout/item_history_tile.xml
@@ -78,13 +78,14 @@
         tools:ignore="HardcodedText" />
 
     <View
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/notch"
         android:layout_width="140dp"
         android:layout_height="2dp"
         android:background="@color/tertiary_2_xdark"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
