--- a/app/src/main/res/layout/item_place_visit.xml
+++ b/app/src/main/res/layout/item_place_visit.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_weight="1"
-        tools:visibility="go"
+        tools:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/tvTitle"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvTitle"
