--- a/app/src/main/res/layout/inflate_timeline.xml
+++ b/app/src/main/res/layout/inflate_timeline.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lTimelineHeader"
         android:layout_width="match_parent"
         android:layout_height="@dimen/history_summary_peek_height"
         android:orientation="vertical">
