--- a/app/src/main/res/layout/fragment_search_place.xml
+++ b/app/src/main/res/layout/fragment_search_place.xml
@@ -30,7 +30,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/destination" />
+                android:src="@drawable/ic_geotag_marker" />
 
             <EditText
                 android:id="@+id/search"
