--- a/app/src/main/res/layout/inflate_current_trip.xml
+++ b/app/src/main/res/layout/inflate_current_trip.xml
@@ -11,33 +11,6 @@
         android:layout_height="140dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/trip_summary_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/content_padding"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/stats"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/destination"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/arrival_sd_c"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                app:layout_constraintTop_toBottomOf="@id/stats" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/trip_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -77,7 +50,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginTop="4dp"
-                android:src="@drawable/destination"
+                android:src="@drawable/ic_geotag_marker"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/trip_to" />
 
