Fix ANR on getting geocoding address. Measurement units selector on Profile tab. Remove legacy trips support. Update Hypertrack SDK to 6.0.3. Fix GraphQL error messages.

--- a/app/src/main/res/layout/fragment_add_place_info.xml
+++ b/app/src/main/res/layout/fragment_add_place_info.xml
@@ -173,5 +173,25 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <include
+        android:id="@+id/lError"
+        layout="@layout/inflate_error"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/lProgressBar"
+        layout="@layout/inflate_progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:visibility="gone" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
