Check permissions on activity resume. Fix overriding base font color by system. Refactor parsing notification data in HandlePushUseCase.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
 
     <color name="colorDescription">#9B9B9B</color>
     <color name="colorTitle">#9B9B9B</color>
+    <color name="colorText">#808080</color>
     <color name="colorTextDark">@color/tertiary_2_xdark</color>
     <color name="colorTakePicture">#857777</color>
     <color name="colorBtnDisable">#AAAAAA</color>
