--- a/app/src/main/res/layout/fragment_outage.xml
+++ b/app/src/main/res/layout/fragment_outage.xml
@@ -39,4 +39,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvOutageTitle"
         tools:text="TextView" />
+
+    <TextView
+        android:id="@+id/bOpenDontkillmyapp"
+        style="@style/LinkButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical"
+        android:padding="16dp"
+        android:text="@string/outage_open_dontkillmyapp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvOutageDescription"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvDontkillmyappHint"
+        style="@style/Text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/outage_dontkillmyapp_hint"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bOpenDontkillmyapp"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
