--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="colorTrackingStopped">#A0A0A0</color>
     <color name="colorGeofence">@color/colorHyperTrackGreen</color>
     <color name="colorGeofenceFill">#3300ce5b</color>
+    <color name="link">#0A60D9</color>
     <color name="dim">#11000000</color>
 
     <!--    History Polyline theme -->
