Geofence visit notifications. Fix infinite loop on requesting permissions when permissions are denied forever. Fix keyboard not showing on Add Integration screen. Add "Show device L1 data in dashboard" button to the Profile screen in debug mode.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -194,7 +194,7 @@
         android:label="OutageFragment">
         <argument
             android:name="outageNotification"
-            app:argType="com.hypertrack.android.use_case.OutageNotification" />
+            app:argType="com.hypertrack.android.use_case.handle_push.OutageNotification" />
     </fragment>
     <action
         android:id="@+id/action_global_outageFragment"
