--- a/app/src/main/res/layout/inflate_paste_deeplink.xml
+++ b/app/src/main/res/layout/inflate_paste_deeplink.xml
@@ -35,7 +35,8 @@
             android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="@string/sign_in_paste_deeplink_hint"
-            android:inputType="textMultiLine"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine|textNoSuggestions"
             android:maxLines="5"
             android:minLines="2"
             app:layout_constraintEnd_toStartOf="@+id/bClose"
