--- a/app/src/main/res/layout/fragment_add_geotag.xml
+++ b/app/src/main/res/layout/fragment_add_geotag.xml
@@ -30,12 +30,11 @@
         android:padding="16dp"
         android:text="@string/add_geotag_hint"
         android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintTop_toBottomOf="@id/tvAddGeotagHint" />
+        app:layout_constraintTop_toBottomOf="@id/tvAddGeotagHint"
+        tools:visibility="visible" />
 
-    <androidx.fragment.app.FragmentContainerView
+    <com.google.android.gms.maps.MapView
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
