--- a/app/src/main/res/layout/fragment_add_integration.xml
+++ b/app/src/main/res/layout/fragment_add_integration.xml
@@ -11,9 +11,7 @@
         android:id="@+id/srlIntegrations"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
         android:background="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -96,19 +94,19 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
-    <Button
-        android:id="@+id/confirm"
-        style="@style/ActionButtonStyle"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/bSearch"
+        style="@style/MinorButtonStyle"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="32dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:text="@string/place_integration_submit_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
+        android:paddingLeft="64dp"
+        android:paddingRight="32dp"
+        android:text="@string/place_integration_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/srlIntegrations" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
